...
                    .foregroundStyle(.white)
                    .background(
                        RoundedRectangle(cornerRadius: 6, style: .continuous)
                    )
                    .font(.title3)
            }
            .accessibilityIdentifier("SubmitButton")
        }
    }
}

extension SubmitButton {
    init(title: String, onTap: @escaping () -> Void) {
...
